--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Lucas Tucker profile picture">
+            <img src="./assets/profile-pic.jpg" alt="Lucas Tucker profile picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +47,7 @@
             <div class="btn-container">
                 <button 
                     class="btn btn-color-2" 
-                    onclick="window.open('./assets/resume-example.pdf')"
+                    onclick="window.open('./assets/LucasTuckerCV.pdf')"
                 >
                     Download CV
                 </button>
@@ -77,7 +77,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                 <img 
-                    src="./assets/about-pic.png" 
+                    src="./assets/about-pic.jpg" 
                     alt="Profile picture" 
                     class="about-pic"
                 />
@@ -97,7 +97,7 @@
                         <img 
                             src="./assets/education.png" 
                             alt="Education icon" 
-                            class="icon"
+                            class="icon education-icon"
                         />
                         <h3>Education</h3>
                         <p>B.Sc. Bachelors <br>M.Sc. Master Degree</p>
@@ -154,7 +154,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/C.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -165,7 +165,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/CPP.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -176,24 +176,24 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/python.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
                             <div>
                                 <h3>Python</h3>
-                                <p>Experienced</p>
+                                <p>Intermidiate</p>
                             </div>
                         </article>
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/JS.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
                             <div>
-                                <h3>JS</h3>
-                                <p>Experienced</p>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
                             </div>
                         </article>
                     </div>
@@ -352,7 +352,7 @@
                     alt="Email icon"
                     class="icon contact-icon email-icon"
                 />
-                <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+                <p><a href="mailto:tucker.lucas.1404@gmail.com">tucker.lucas.1404@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img 
