--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Lucas Tucker</h1>
-            <p class="section__text__p2">Frontend developer</p>
+            <p class="section__text__p2">Software developer</p>
             <div class="btn-container">
                 <button 
                     class="btn btn-color-2" 
@@ -60,7 +60,7 @@
                     src="./assets/linkedin.png" 
                     alt="My LinkedIn profile" 
                     class="icon" 
-                    onclick="location.href='https://www.linkedin.com/in/lucas-tucker-401221169/'"
+                    onclick="location.href='https://www.linkedin.com/in/lucastucker/'"
                 />
                 <img 
                     src="./assets/github.png" 
@@ -91,7 +91,7 @@
                             class="icon"
                         />
                         <h3>Experience</h3>
-                        <p>2+ years <br>Frontend developement</p>
+                        <p>2+ years <br>Software developement</p>
                     </div>
                     <div class="details-container">
                         <img 
@@ -100,7 +100,7 @@
                             class="icon education-icon"
                         />
                         <h3>Education</h3>
-                        <p>B.Sc. Bachelors <br>M.Sc. Master Degree</p>
+                        <p>BSc in Electrical and Computer Engineering<br>MSc in Electrical and Computer Engineering - Telecommunications</p>
                     </div>
                 </div>
                 <div class="text-container">
@@ -124,34 +124,12 @@
     </section>
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
+        <h1 class="title">Skills</h1>
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <h2 class="experience-sub-title">Programming languages</h2>
                     <div class="article-container">
-                        <article>
-                            <img 
-                                src="./assets/checkmark.png" 
-                                alt="Experience icon" 
-                                class="icon"
-                            />
-                            <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img 
-                                src="./assets/checkmark.png" 
-                                alt="Experience icon" 
-                                class="icon"
-                            />
-                            <div>
-                                <h3>CSS</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
                         <article>
                             <img 
                                 src="./assets/C.png" 
@@ -176,23 +154,23 @@
                         </article>
                         <article>
                             <img 
+                                src="./assets/java.png" 
+                                alt="Experience icon" 
+                                class="icon"
+                            />
+                            <div>
+                                <h3>Java</h3>
+                                <p>Intermidiate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
                                 src="./assets/python.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
                             <div>
                                 <h3>Python</h3>
-                                <p>Intermidiate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img 
-                                src="./assets/JS.png" 
-                                alt="Experience icon" 
-                                class="icon"
-                            />
-                            <div>
-                                <h3>JavaScript</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
@@ -203,23 +181,23 @@
                     <div class="article-container">
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/git.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
                             <div>
-                                <h3>POST</h3>
+                                <h3>Git</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/github.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
                             <div>
-                                <h3>MongoDB</h3>
+                                <h3>Github</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
@@ -352,7 +330,7 @@
                     alt="Email icon"
                     class="icon contact-icon email-icon"
                 />
-                <p><a href="mailto:tucker.lucas.1404@gmail.com">tucker.lucas.1404@gmail.com</a></p>
+                <p><a href="mailto:lucas.tucker.developer@gmail.com">lucas.tucker.developer@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img 
@@ -360,7 +338,7 @@
                     alt="LinkedIn icon"
                     class="icon contact-icon"
                 />
-                <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/lucastucker/">linkedin.com/in/lucastucker/</a></p>
             </div>
         </div>
     </section>
@@ -375,7 +353,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2024 Lucas Tucker. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 - By Lucas Tucker. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
