Add pacman .exe download
Pacman .exe is an installer for the whole game. Also added new CV.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="btn-container">
                 <button 
                     class="btn btn-color-2" 
-                    onclick="window.open('./assets/LucasTuckerCV.pdf')"
+                    onclick="window.open('./assets/Lucas_Tucker_Software_Developer_Resume.pdf')"
                 >
                     Download CV
                 </button>
@@ -171,7 +171,7 @@
                             />
                             <div>
                                 <h3>Python</h3>
-                                <p>Basic</p>
+                                <p>Experienced</p>
                             </div>
                         </article>
                     </div>
@@ -203,23 +203,23 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/CMake.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
                             <div>
-                                <h3>Example</h3>
+                                <h3>CMake</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <img 
-                                src="./assets/checkmark.png" 
+                                src="./assets/Scrum.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
                             <div>
-                                <h3>C++</h3>
+                                <h3>Scrum</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
@@ -242,25 +242,26 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                            src="./assets/project-1.png" 
+                            src="./assets/Pacman_project.PNG" 
                             alt="Project 1" 
                             class="project-img"
                         />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Pacman Java Game</h2>
                     <div class="btn-container">
                         <button 
                             class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://github.com/TuckerLucas/Pacman-game'"
                         >
                             Github
                         </button>
-                        <button 
+                        <a href="./assets/Pacman.exe" download="Pacman">
+                            <button 
                             class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/'"
                         >
-                            Live Demo
+                            Download
                         </button>
+                        </a>
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -271,7 +272,7 @@
                             class="project-img"
                         />
                     </div>
-                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <h2 class="experience-sub-title project-title">Web Single Slit Experiment Simulator</h2>
                     <div class="btn-container">
                         <button 
                             class="btn btn-color-2 project-btn" 
