Fix pacman installer download
Not sure if this fixes it though...

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         >
                             Github
                         </button>
-                        <a href="./assets/Pacman.exe" download="Pacman">
+                        <a href="./assets/Pacman.exe" download="Pacman.exe">
                             <button 
                             class="btn btn-color-2 project-btn" 
                         >
