--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         >
                             Github
                         </button>
-                        <a href="./assets/Pacman.exe" download="Pacman.exe">
+                        <a href="./assets/PacmanInstaller.exe" download="PacmanInstaller.exe">
                             <button 
                             class="btn btn-color-2 project-btn" 
                         >
