--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.jpg" alt="Lucas Tucker profile picture">
+            <img src="./assets/photos/profile.jpg" alt="Lucas Tucker profile picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +47,7 @@
             <div class="btn-container">
                 <button 
                     class="btn btn-color-2" 
-                    onclick="window.open('./assets/Lucas_Tucker_Software_Developer_Resume.pdf')"
+                    onclick="window.open('./assets/download/Lucas_Tucker_Software_Developer_Resume.pdf')"
                 >
                     Download CV
                 </button>
@@ -57,13 +57,13 @@
             </div>
             <div id="socials-container">
                 <img 
-                    src="./assets/linkedin.png" 
+                    src="./assets/thumbnails/contact/LinkedIn.png" 
                     alt="My LinkedIn profile" 
                     class="icon" 
                     onclick="location.href='https://www.linkedin.com/in/lucastucker/'"
                 />
                 <img 
-                    src="./assets/github.png" 
+                    src="./assets/thumbnails/contact/GitHub.png" 
                     alt="My Github profile" 
                     class="icon" 
                     onclick="location.href='https://github.com/TuckerLucas'"
@@ -77,7 +77,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                 <img 
-                    src="./assets/about-pic.jpg" 
+                    src="./assets/photos/about.jpg" 
                     alt="Profile picture" 
                     class="about-pic"
                 />
@@ -86,7 +86,7 @@
                 <div class="about-containers">
                     <div class="details-container">
                         <img 
-                            src="./assets/experience.png" 
+                            src="./assets/thumbnails/others/experience.png" 
                             alt="Experience icon" 
                             class="icon"
                         />
@@ -95,7 +95,7 @@
                     </div>
                     <div class="details-container">
                         <img 
-                            src="./assets/education.png" 
+                            src="./assets/thumbnails/others/education.png" 
                             alt="Education icon" 
                             class="icon education-icon"
                         />
@@ -116,7 +116,7 @@
             </div>
         </div>
         <img 
-            src="./assets/arrow.png" 
+            src="./assets/thumbnails/others/arrow.png" 
             alt="Arrow icon" 
             class="icon arrow" 
             onclick="location.href='./#experience'"
@@ -132,7 +132,7 @@
                     <div class="article-container">
                         <article>
                             <img 
-                                src="./assets/C.png" 
+                                src="./assets/thumbnails/skills/C.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -143,7 +143,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/CPP.png" 
+                                src="./assets/thumbnails/skills/CPP.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -154,7 +154,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/java.png" 
+                                src="./assets//thumbnails/skills/Java.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -165,7 +165,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/python.png" 
+                                src="./assets/thumbnails/skills/Python.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -181,7 +181,7 @@
                     <div class="article-container">
                         <article>
                             <img 
-                                src="./assets/git.png" 
+                                src="./assets/thumbnails/skills/Git.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -192,7 +192,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/github.png" 
+                                src="./assets/thumbnails/skills/GitHub.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -203,7 +203,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/CMake.png" 
+                                src="./assets/thumbnails/skills/CMake.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -214,7 +214,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/Scrum.png" 
+                                src="./assets/thumbnails/skills/Scrum.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -228,7 +228,7 @@
             </div>
         </div>
         <img 
-            src="./assets/arrow.png" 
+            src="./assets/thumbnails/others/arrow.png" 
             alt="Arrow icon" 
             class="icon arrow" 
             onclick="location.href='./#projects'"
@@ -242,7 +242,7 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                            src="./assets/Pacman_project.PNG" 
+                            src="./assets/thumbnails/projects/Pacman.PNG" 
                             alt="Project 1" 
                             class="project-img"
                         />
@@ -255,7 +255,7 @@
                         >
                             Github
                         </button>
-                        <a href="./assets/Pacman Installer.exe" download="Pacman Installer.exe">
+                        <a href="./assets/download/Pacman Installer.exe" download="Pacman Installer.exe">
                             <button 
                             class="btn btn-color-2 project-btn" 
                         >
@@ -267,7 +267,7 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                            src="./assets/project-2.png" 
+                            src="./assets/thumbnails/projects/project-2.png" 
                             alt="Project 2" 
                             class="project-img"
                         />
@@ -291,7 +291,7 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                            src="./assets/project-3.png" 
+                            src="./assets/thumbnails/projects/project-3.png" 
                             alt="Project 3" 
                             class="project-img"
                         />
@@ -315,10 +315,10 @@
             </div>
         </div>
         <img 
-            src="./assets/arrow.png" 
+            src="./assets/thumbnails/others/arrow.png" 
             alt="Arrow icon" 
             class="icon arrow" 
-            onclick="location.href='./#projects'"
+            onclick="location.href='./#contact'"
         />
     </section>
     <section id="contact">
@@ -327,7 +327,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img 
-                    src="./assets/email.png" 
+                    src="./assets/thumbnails/contact/Email.png" 
                     alt="Email icon"
                     class="icon contact-icon email-icon"
                 />
@@ -335,7 +335,7 @@
             </div>
             <div class="contact-info-container">
                 <img 
-                    src="./assets/linkedin.png" 
+                    src="./assets/thumbnails/contact/LinkedIn.png" 
                     alt="LinkedIn icon"
                     class="icon contact-icon"
                 />
