--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             </div>
             <div id="socials-container">
                 <img 
-                    src="./assets/thumbnails/contact/LinkedIn.png" 
+                    src="./assets/icons/contact/LinkedIn.png" 
                     alt="My LinkedIn profile" 
                     class="icon" 
                     onclick="location.href='https://www.linkedin.com/in/lucastucker/'"
                 />
                 <img 
-                    src="./assets/thumbnails/contact/GitHub.png" 
+                    src="./assets/icons/contact/GitHub.png" 
                     alt="My Github profile" 
                     class="icon" 
                     onclick="location.href='https://github.com/TuckerLucas'"
@@ -88,7 +88,7 @@
                 <div class="about-containers">
                     <div class="details-container">
                         <img 
-                            src="./assets/thumbnails/others/experience.png" 
+                            src="./assets/icons/others/experience.png" 
                             alt="Experience icon" 
                             class="icon"
                         />
@@ -97,7 +97,7 @@
                     </div>
                     <div class="details-container">
                         <img 
-                            src="./assets/thumbnails/others/education.png" 
+                            src="./assets/icons/others/education.png" 
                             alt="Education icon" 
                             class="icon education-icon"
                         />
@@ -118,7 +118,7 @@
             </div>
         </div>
         <img 
-            src="./assets/thumbnails/others/arrow.png" 
+            src="./assets/icons/others/arrow.png" 
             alt="Arrow icon" 
             class="icon arrow" 
             onclick="location.href='./#experience'"
@@ -134,7 +134,7 @@
                     <div class="article-container">
                         <article>
                             <img 
-                                src="./assets/thumbnails/skills/C.png" 
+                                src="./assets/icons/skills/C.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -145,7 +145,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/thumbnails/skills/CPP.png" 
+                                src="./assets/icons/skills/CPP.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -156,7 +156,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets//thumbnails/skills/Java.png" 
+                                src="./assets//icons/skills/Java.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -167,7 +167,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/thumbnails/skills/Python.png" 
+                                src="./assets/icons/skills/Python.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -183,7 +183,7 @@
                     <div class="article-container">
                         <article>
                             <img 
-                                src="./assets/thumbnails/skills/Git.png" 
+                                src="./assets/icons/skills/Git.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -194,7 +194,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/thumbnails/skills/GitHub.png" 
+                                src="./assets/icons/skills/GitHub.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -205,7 +205,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/thumbnails/skills/CMake.png" 
+                                src="./assets/icons/skills/CMake.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -216,7 +216,7 @@
                         </article>
                         <article>
                             <img 
-                                src="./assets/thumbnails/skills/Scrum.png" 
+                                src="./assets/icons/skills/Scrum.png" 
                                 alt="Experience icon" 
                                 class="icon"
                             />
@@ -230,7 +230,7 @@
             </div>
         </div>
         <img 
-            src="./assets/thumbnails/others/arrow.png" 
+            src="./assets/icons/others/arrow.png" 
             alt="Arrow icon" 
             class="icon arrow" 
             onclick="location.href='./#timeline'"
@@ -240,45 +240,8 @@
         <p class="section__text__p1">Browse Through My</p>
         <h1 class="title">Timeline</h1>
         <div class="timeline">
-            <div class="container left">
-              <div class="content">
-                <h2>April 2023 - Present</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-              </div>
-            </div>
-            <div class="container right">
-              <div class="content">
-                <h2>Feb. 2022 - Feb. 2023</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-              </div>
-            </div>
-            <div class="container left">
-              <div class="content">
-                <h2>Mar. 2021 - Aug. 2021</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-              </div>
-            </div>
-            <div class="container right">
-              <div class="content">
-                <h2>Sep. 2019 - Nov. 2021</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-              </div>
-            </div>
-            <div class="container left">
-              <div class="content">
-                <h2>Feb. 2019 - Sep. 2019</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-              </div>
-            </div>
-            <div class="container right">
-              <div class="content">
-                <h2>Sep. 2016 - Sep. 2019</h2>
-                <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-              </div>
-            </div>
-          </div>
         <img 
-            src="./assets/thumbnails/others/arrow.png" 
+            src="./assets/icons/others/arrow.png" 
             alt="Arrow icon" 
             class="icon arrow" 
             onclick="location.href='./#projects'"
@@ -292,7 +255,7 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                            src="./assets/thumbnails/projects/Pacman.PNG" 
+                            src="./assets/icons/projects/Pacman.PNG" 
                             alt="Project 1" 
                             class="project-img"
                         />
@@ -317,7 +280,7 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                            src="./assets/thumbnails/projects/project-2.png" 
+                            src="./assets/icons/projects/project-2.png" 
                             alt="Project 2" 
                             class="project-img"
                         />
@@ -341,7 +304,7 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                            src="./assets/thumbnails/projects/project-3.png" 
+                            src="./assets/icons/projects/project-3.png" 
                             alt="Project 3" 
                             class="project-img"
                         />
@@ -365,7 +328,7 @@
             </div>
         </div>
         <img 
-            src="./assets/thumbnails/others/arrow.png" 
+            src="./assets/icons/others/arrow.png" 
             alt="Arrow icon" 
             class="icon arrow" 
             onclick="location.href='./#contact'"
@@ -377,7 +340,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img 
-                    src="./assets/thumbnails/contact/Email.png" 
+                    src="./assets/icons/contact/Email.png" 
                     alt="Email icon"
                     class="icon contact-icon email-icon"
                 />
@@ -385,7 +348,7 @@
             </div>
             <div class="contact-info-container">
                 <img 
-                    src="./assets/thumbnails/contact/LinkedIn.png" 
+                    src="./assets/icons/contact/LinkedIn.png" 
                     alt="LinkedIn icon"
                     class="icon contact-icon"
                 />
